tests/NormalTests/paczka1/small_fuzzy/16281469.err
Error in line 8: D4HCzj S991 28,5
Error in line 5: S991 A698 63,0
